--- a/OLPR/requirements.txt
+++ b/OLPR/requirements.txt
@@ -2,8 +2,7 @@
 streamlit>=1.28.0
 
 # Computer Vision and Image Processing
-opencv-python>=4.8.0
-opencv-contrib-python>=4.8.0
+opencv-python-headless>=4.8.0
 Pillow>=9.5.0
 
 # Deep Learning and AI
